# Homomorphic-Encryption

./: CKKS_encrypt_decrypt.cpp  CKKS_homomorphic_operations.cpp  CMakeLists.txt  DC_Motor.cpp  DC_Motor_PD.cpp  README.md
